--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style href="MiEstilo.css">
+    <title>Document</title> 
+    <style href="MiEstilo.css"></style>
 </head>
+
 <body>
 
     <h1>Hola que tal</h1>
